<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".KcalActivity"
    android:background="#FFFF"
    android:gravity="center">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:onClick="Back"
                android:layout_width="150dp"
                android:layout_height="30dp"
                android:text="@string/KcalNow"
                android:textSize="18dp"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/tvTotalCalories"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textSize="48sp"
                android:textStyle="bold"
                android:textColor="#000000" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Kcal"
                android:textSize="16sp"
                android:textColor="#a1a1a1"
                android:layout_marginTop="4dp" />

            <View
                android:layout_width="180dp"
                android:layout_height="1dp"
                android:background="#ed2513"
                android:layout_marginTop="15dp"/>

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="160dp"
                android:layout_height="30dp"
                android:text="@string/KcalPlus"
                android:textSize="18dp"
                android:textColor="#000000"/>

            <EditText
                android:id="@+id/InputKcal"
                android:layout_width="140dp"
                android:layout_height="35dp"
                android:layout_marginTop="10dp"
                android:hint="@string/InputKcal"
                android:textSize="13dp" />

            <Button
                android:id="@+id/btnPlus"
                android:layout_width="160dp"
                android:layout_height="30dp"
                android:layout_marginTop="20dp"
                android:background="#ed2513"
                android:text="@string/Plus"
                android:textColor="#FFFF"/>
        </LinearLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>